--- a/templates/accessory-item-header.html
+++ b/templates/accessory-item-header.html
@@ -1,4 +1,4 @@
-≈                <!-- start accessory-item-header.html -->
+                <!-- start accessory-item-header.html -->
                 <tr>
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
