--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -25,7 +25,7 @@
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                            <p style="font-size: 16px;line-height: 20px;font-weight: 400;{{item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['post_copy']}}</p>
+                            <p style="font-size: 16px;line-height: 20px;font-weight: {{item['font_weight']}} ;{{item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['post_copy']}}</p>
                           </td>
                         </tr>
                       </tbody>
