--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -44,7 +44,7 @@
     @font-face {
       src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff2') format("woff2"),
       url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff') format("woff");
-      font-family: 'WarblerText';
+      font-family: 'WarblerText-Regular';
       font-style: normal;
       font-weight: 400;
     }
@@ -52,7 +52,7 @@
     @font-face {
       src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff2') format("woff2"),
       url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff') format("woff");
-      font-family: 'WarblerText';
+      font-family: 'WarblerText-Italic';
       font-style: italic;
       font-weight: 400;
     }
@@ -60,21 +60,21 @@
     @font-face {
       src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
       url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
-      font-family: 'WarblerText';
+      font-family: 'WarblerText-Bold';
       font-style: bold;
       font-weight: 700;
     }
     @font-face {
       src: url('/fonts/roslindale/RoslindaleText-Regular.woff2') format("woff2"),
       url('/fonts/roslindale/RoslindaleText-Regular.woff') format("woff");
-      font-family: 'RoslindaleText';
+      font-family: 'RoslindaleText-Regular';
       font-style: normal;
       font-weight: normal;
     }
     @font-face {
       src: url('/fonts/roslindale/RoslindaleText-Bold.woff2') format("woff2"),
       url('/fonts/roslindale/RoslindaleText-Bold.woff') format("woff");
-      font-family: 'RoslindaleText';
+      font-family: 'RoslindaleText-Bold';
       font-style: normal;
       font-weight: bold;
     }
@@ -182,6 +182,21 @@
         line-height: inherit !important;
       }
     </style>
+    <style>
+      /* CSS HEX */
+
+:root {
+  --orange-color: #FFA500;
+  --aquamarine: #77F2B4;
+  --amethyst: #9b5de5ff;
+--lavender-pink: #F7B7D7;
+--maize: #fee440ff;
+--timberwolf: #CCCCC8;
+--celadon: #B6D9C6;
+--brightblue: #95defe;
+--straw: #F7F49C;
+}
+    </style>
   </head>
   <body  style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
     
@@ -190,10 +205,10 @@
       <tbody>
         <tr>
           <!-- HEADER COLOR -->
-          <td align="center" style="padding-left: 2rem; background-color: #D1D5DE; border-collapse: collapse;" valign="top">
+          <td align="left" style="padding-left: 5rem; background-color: #D1D5DE; border-collapse: collapse;" valign="top">
             
             <!-- 640px container -->
-            <table border="0" cellpadding="0" cellspacing="0" class="header mobt0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 640px;max-width: 640px;padding-top: 20px;" width="640">
+            <table border="0" cellpadding="0" cellspacing="0" class="header mobt0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;padding-top: 20px;" width="640">
               <tbody>
                 <tr>
                   <td align="left" style="border-collapse: collapse;">
@@ -204,8 +219,8 @@
                           <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="160">
                             <tbody>
                               <tr>
-                                <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 5px;padding-left: 10px;" valign="top">
-                                  <p class="marb5" style="font-family:'FormaDJRVariable'; font-weight: bold; font-style: bold; font-size: 22px;line-height: 20px;color: #000000;padding: 0;margin: 0;margin-bottom: 5px;">
+                                <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 5px;padding-left: 3rem;" valign="top">
+                                  <p style="font-family:'FormaDJRVariable'; font-weight: 800; font-size: 24px;line-height: 24px;color: #000000;padding: 0;margin: 0;margin-bottom: 5px;">
                                     <!-- QUOTE -->
                                     Imagination<br>Precedes<br> Inspiration<br>Precedes <br>Innovation
                                   </p>
@@ -234,7 +249,7 @@
 
 
         <tr>
-          <td align="center" style="padding-left: 2rem; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+          <td align="center" style="padding-left: 0.5rem; padding-right: 1rem; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
 
             <!-- 660px container (white background) -->
             <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
