--- a/templates/featured-item.html
+++ b/templates/featured-item.html
@@ -3,7 +3,7 @@
   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
 </tr>
 <tr>
-    <td style="background-color:{{ item['background_color'] }};">
+    <td style="background-color: {{ item['background_color'] }};">
         <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
             <tbody>
               <tr>
@@ -24,7 +24,7 @@
                   <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
                     <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></h2>
                   <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</h3>
-                  <p style="font-family: '{{ item['font_family'] }}';  '{{ item['font_style'] }}; font-size: 16px;line-height: 20px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br>
+                  <p style="font-family: '{{ item['font_family'] }}';  '{{ item['font_style'] }}; font-size: {{item['main_font_size']}};line-height: 20px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br>
                     <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
                 </td>
               </tr>
