--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -1,7 +1,7 @@
                 
                 <!-- start discord-callout-item.html -->
                 <tr>
-                  <td align="left" style="border-collapse: collapse;">
+                  <td align="left" style="border-collapse: collapse; background-color: {{ item['background_color']}}">
 
                     <!--[if mso]>
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
