--- a/templates/box-item.html
+++ b/templates/box-item.html
@@ -22,7 +22,7 @@
                           <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font_style']}}; font-color: {{ item['text_color']}}; font-size: 15px;line-height: 18px;font-weight: 400;padding: 0;margin: 0;margin-bottom: 15px;">
                             {{ item['main_copy']}}
                             <br><br>
-                    <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
+                    <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">{{ item['link_text'] }}</a>⇨</p>
                           </p>
                         </td>
                       </tr>
