--- a/templates/static/bottom.html
+++ b/templates/static/bottom.html
@@ -44,9 +44,9 @@
                       </tr>
                       <tr>
                         <td style="text-align: center;border-collapse: collapse;padding-top: 0px;padding-right: 20px;padding-left: 20px;" valign="top">
-                          <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;"><a href="%FORWARD2FRIEND%" style="text-decoration: underline;color: #000000 !important;>Amplify This</h1>
+                          <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;"><a href="%FORWARD2FRIEND%" style="text-decoration: underline;color: #000000 !important;">Amplify This</h1>
                           <p class="share" style="font-size: 9px;line-height: 20px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border: 1px #5f5f5f;background: #f0f0f0;text-align: center;">
-                            <a href="https://backoffice.nearfuturelaboratory.com/outbox/issues/2024/w12y24.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">backoffice.nearfuturelaboratory.com/outbox/issues/2024/w13-y24.html</b></a>
+                            <a href="https://backoffice.nearfuturelaboratory.com/outbox/issues/2024/w14-y24.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">backoffice.nearfuturelaboratory.com/outbox/issues/2024/w14-y24.html</b></a>
                           </p>
                         </td>
                       </tr>
@@ -94,7 +94,6 @@
                         <td class="padt20 padr20 padl10 mobt0" style="border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-left: 10px;" valign="top">
                           <p style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
 
-                            <!-- <a href="#" style="text-decoration: underline;color: #000000 !important;">Browse older issues</a> -->
                           </p>
                           <p style="font-family: 'FormaDJRVariable'; font-variation-settings: 'wght' 400; font-size: 14px;line-height: 19px;font-weight: 400;color: #707070 !important;padding: 0;margin: 0;margin-bottom: 15px;">Published by:<br><a class="grey" href="https://julianbleecker.com" style="text-decoration: underline;color: #707070 !important;">Julian Bleecker</a><br> Founder of the Near Future Laboratory, LLC<br>Venice Beach<br> California, USA<br/>
                             <a href="%UNSUBSCRIBELINK%" style="text-decoration: underline;color: #000000 !important;">Unsubscribe</a>
@@ -139,7 +138,7 @@
               <tr>
                 <td style="font-family: 'Space Mono'; color: #fc00ac; font-style: normal; font-weight: 300; font-size: 14px; line-height: 15px; text-align: center; padding-top: 2px; padding-bottom: 20px;">
 
-                  Build Time: 2024-03-25T07:57:36-07:00<br/>
+                  Build Time: 2024-04-02T20:02:25-07:00<br/>
                   %SENDER-INFO%<br/>
                 </td>
               </tr>
