--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -1,8 +1,8 @@
                 
                 <!-- start discord-callout-item.html -->
                 <tr>
-                  <td align="left" style="border-collapse: collapse; background-color: {{ item['background_color']}}">
-
+                  <td align="left" style="border-bottom-left-radius: {{ item['bottom_left_radius']}}; border-bottom-right-radius: {{ item['bottom_right_radius']}}; border-collapse: collapse; background-color: {{ item['background_color']}};">
+                    
                     <!--[if mso]>
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr><td width="35%" valign="top"><![endif]-->
