--- a/templates/featured-special.html
+++ b/templates/featured-special.html
@@ -3,7 +3,7 @@
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" style=" border-collapse: collapse;border-left:{{ item["border_width"]}} solid {{ item["outline_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-top: {{ item["border_width"] }} solid {{ item["border_color"] }}; padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}; {{ item['extra_box_style']}}">
+                  <td align="left" style=" border-collapse: collapse;border-left:{{ item["border_width"]}} solid {{ item["border_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-top: {{ item["border_width"] }} solid {{ item["border_color"] }}; padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}; {{ item['extra_box_style']}}">
                     <p style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 22px;font-weight: 900;line-height: 23px;margin: 0;padding: 0;"><a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; font-weight: 900; font-size: 1.3rem;color:{{ item["light_text_color"]}}">{{ item['title']}}</a><a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: {{ item["light_text_color"]}} !important;">{{ item['category_text']}}</a>
                     </p>
                   </td>
@@ -19,7 +19,7 @@
                         <tr>
                           <td class="padt20 padr10 padl20 padb5" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
                             <p style="font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
-                              <a href='{{ item['link_ref']}}'><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: 0.8rem;"></a>
+                              <a href='{{ item['link_ref']}}'><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: {{ item["img_border_radius"] }};"></a>
                             </p>
                           </td>
                         </tr>
