--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -1,5 +1,5 @@
 <!-- start full-width-item.html-->
-<tr>
+<tr style="border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }};{{ item['extra_box_style'] }};">
     <td style="background:{{ item['background_color'] }}; ">
         <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600px">
             <tbody>
