--- a/templates/member-feature-item.html
+++ b/templates/member-feature-item.html
@@ -1,12 +1,12 @@
 
                 <!-- start member-feature-item.html-->
                 <tr>
-                  <td align="left" style=" background-color: {{item['background_color']}}; border-collapse: collapse;">
+                  <td align="left" style="background-color: {{item['background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }}; {{ item['extra_box_style'] }};">
 
                     <!--[if mso]>
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr><td width="50%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
+                    <table align="right" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
@@ -19,13 +19,13 @@
                     </table>
 
                     <!--[if mso]></td><td width="50%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
+                    <table align="left" border="0" cellpadding="0" cellspacing="0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
                       <tbody>
                         <tr>
-                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px; background-color: {{item['background_color']}}" valign="top">
-                            <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
+                            <p class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
                               <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['name']}}
-                              </a> ↻</h2>{{ item['subtitle']}}
+                              </a> ↻</p>{{ item['subtitle']}}
                           </td>
                         </tr>
                       </tbody>
@@ -37,17 +37,14 @@
 
 
                 <tr>
-                  <td align="left" style=" background-color: {{item['background_color']}}; border-collapse: collapse;">
-
-
+                  <td align="left" style=" background-color: {{item['background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }}; border-bottom: {{ item['border_width']}} solid {{ item['border_color'] }}; {{ item['extra_box_style'] }};">
 
                     <!--[if mso]></td><td width="50%" valign="top"><![endif]-->
                     <table border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" >
                       <tbody>
                         <tr>
-                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px; background-color: {{item['background_color']}}" valign="top">
+                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
                             <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                            <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 16px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: #707070 !important;">{{ item['author_username']}}</p>
                             <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Let's grow the network.<br>Connect with <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">{{ item['first_name'] }}↗</a>.</p>
                           </td>
                         </tr>
