--- a/templates/static/bottom.html
+++ b/templates/static/bottom.html
@@ -46,7 +46,7 @@
                         <td style="text-align: center;border-collapse: collapse;padding-top: 0px;padding-right: 20px;padding-left: 20px;" valign="top">
                           <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;"><a href="%FORWARD2FRIEND%" style="text-decoration: underline;color: #000000 !important;">Amplify This</h1>
                           <p class="share" style="font-size: 9px;line-height: 20px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border: 1px #5f5f5f;background: #f0f0f0;text-align: center;">
-                            <a href="https://backoffice.nearfuturelaboratory.com/outbox/issues/2024/w14-y24.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">backoffice.nearfuturelaboratory.com/outbox/issues/2024/w14-y24.html</b></a>
+                            <a href="https://backoffice.nearfuturelaboratory.com/outbox/issues/2024/w15-y24.html" style="text-decoration: underline;color: #000000 !important;"><b style="font-size: 18px; font-weight: 400;">backoffice.nearfuturelaboratory.com/outbox/issues/2024/w15-y24.html</b></a>
                           </p>
                         </td>
                       </tr>
@@ -78,7 +78,7 @@
                         <td class="padt20 padr20 padb5 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 20px;padding-bottom: 5px;padding-left: 20px;" valign="top">
                           <p style="font-family: 'FormaDJRVariable'; font-variation-settings: 'wght' 600; font-size: 14px;line-height: 19px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Our hypothesis is that Imagination is our evolutionary advantage.</p>
                           <p style="font-size: 14px;line-height: 19px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px; font-family: 'FormaDJRVariable'; font-variation-settings: 'wght' 400;">Our global headquarters is located in a small studio in Venice Beach, California, and our community is geographically distributed and centered online, at the moment, in the Near Future Laboratory Discord, which you can join by becoming a paying subscriber on <a href="https://patreon.com/nearfuturelaboratory"style="text-decoration: underline;font-size: 14px;line-height: 19px;color: #000000 !important;">Patreon</a> or <a href="https://nearfuturelaboratory.substack.com/" style="text-decoration: underline;font-size: 14px;line-height: 19px;color: #000000 !important;">Substack</a>.</p>
-                          <p style="font-family: 'FormaDJRVariable'; font-variation-settings: 'wght' 500;font-size: 14px;line-height: 19px;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Get in touch. We are always seeking opportunities to help you and your organization Imagine Harder. <a href="#" style="text-decoration: underline;color: #000000 !important;">https://backoffice.nearfuturelaboratory.com/contact</a>
+                          <p style="font-family: 'FormaDJRVariable'; font-variation-settings: 'wght' 500;font-size: 14px;line-height: 19px;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Get in touch. We are always seeking opportunities to help you and your organization Imagine Harder. <a href="https://backoffice.nearfuturelaboratory.com/contact" style="text-decoration: underline;color: #000000 !important;">https://backoffice.nearfuturelaboratory.com/contact</a>
 
                         </p>
                         </td>
@@ -138,7 +138,7 @@
               <tr>
                 <td style="font-family: 'Space Mono'; color: #fc00ac; font-style: normal; font-weight: 300; font-size: 14px; line-height: 15px; text-align: center; padding-top: 2px; padding-bottom: 20px;">
 
-                  Build Time: 2024-04-02T20:02:25-07:00<br/>
+                  Build Time: 2024-04-08T09:26:08-07:00<br/>
                   %SENDER-INFO%<br/>
                 </td>
               </tr>
