--- a/templates/featured-special.html
+++ b/templates/featured-special.html
@@ -1,10 +1,12 @@
                 <!-- start featured-special.html-->
                 <tr>
-                  <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
+                  <td class="spacer" style="border-collapse: collapse; font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" style=" border-collapse: collapse;border-left:{{ item["border_width"]}} solid {{ item["border_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-top: {{ item["border_width"] }} solid {{ item["border_color"] }}; padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}; {{ item['extra_box_style']}}">
-                    <p style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 22px;font-weight: 900;line-height: 23px;margin: 0;padding: 0;"><a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; font-weight: 900; font-size: 1.3rem;color:{{ item["light_text_color"]}}">{{ item['title']}}</a><a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block;font-size: 12px;line-height: 25px;font-weight: 400;float: right;color: {{ item["light_text_color"]}} !important;">{{ item['category_text']}}</a>
+                  <td align="left" style=" border-collapse: collapse;border-left:{{ item["border_width"]}} solid {{ item["border_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-top: {{ item["border_width"] }} solid {{ item["border_color"] }}; padding-top: 15px; padding-right: 20px; padding-left: 20px; padding-bottom: 15px; background-color:{{ item['background_color']}}; {{ item['extra_box_style']}}">
+                    <p style="mso-line-height-rule: exactly; font-family: '{{ item['title_font_family'] }}'; font-size: {{ item['title_font_size']}}; font-weight: {{ item['title_font_weight']}}; line-height: normal; margin: 0;padding: 0;">
+                      <a href="{{ item['link_ref']}}" style="text-decoration: none; display: inline-block; color:{{ item["light_text_color"]}}">{{ item['title']}}</a>
+                      <a href="{{ item['link_ref']}}" style="text-decoration: none;display: inline-block; font-size: 12px;line-height: 25px; font-weight: 400; float: right;color: {{ item["light_text_color"]}} !important;">{{ item['category_text']}}</a>
                     </p>
                   </td>
                 </tr>
@@ -18,7 +20,7 @@
                       <tbody>
                         <tr>
                           <td class="padt20 padr10 padl20 padb5" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
-                            <p style="font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
+                            <p style="padding: 0;margin: 0;margin-bottom: 15px;">
                               <a href='{{ item['link_ref']}}'><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: {{ item["img_border_radius"] }};"></a>
                             </p>
                           </td>
@@ -27,14 +29,14 @@
                     </table>
 
                     <!--[if mso]></td><td width="65%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
+                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="360">
                       <tbody>
                         <tr>
-                          <td class="padt15 padr20 padl10 padb5 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
-                            <p class="padb5" style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}';font-size: 16px;line-height: 23px;font-weight: 600;color: {{item["text_color"]}};margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: {{item["text_color"]}} !important;">{{ item['link_text']}}</a> →</p>
-                            <p style="mso-line-height-rule: exactly;font-size: 16px;line-height: 18px;font-weight: 400;margin: 0;padding: 0 0 5px 0; color: {{ item["light_text_color"]}} !important;">{{ item['subtitle']}}</p>
-                            <p style="font-family: '{{ item['font_family'] }}'; font-size: {{item['main_font_size']}};line-height: 18px;font-weight: {{item['font-weight']}}color:{{item["text_color"]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }} 
+                          <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-bottom: 5px;padding-left: 10px;" valign="top">
+                            <p style="mso-line-height-rule: exactly; font-family: '{{ item['title_font_family'] }}'; font-size: {{item['title_font_size']}}; line-height: {{item['main_line_height']}}; font-weight: bold; color: {{item["text_color"]}}; margin: 0;padding: 0 0 15px 0;">
+                              <a href="{{ item['link_ref']}}" style="text-decoration: underline; color: {{item["text_color"]}} !important;">{{ item['link_text']}}</a> →</p>
+                            <p style="mso-line-height-rule: exactly; font-size: {{item['subtitle_font_size']}}; line-height: normal; font-weight: bold; margin: 0;padding: 0 0 10px 0; color: {{ item["light_text_color"]}} !important;">{{ item['subtitle']}}</p>
+                            <p style="font-family: '{{ item['font_family'] }}'; font-size: {{item['main_font_size']}}; line-height: {{item['main_line_height']}}; font-weight: {{item['font-weight']}}; color:{{item["text_color"]}};padding: 0; margin: 0; margin-bottom: 15px;">{{ item['main_copy'] }} 
                               </p>
                           </td>
                         </tr>
