--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -1,12 +1,12 @@
 <!-- start full-width-item.html-->
 <tr style="border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }};{{ item['extra_box_style'] }};">
     <td style="background:{{ item['background_color'] }}; ">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600px">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="600px">
             <tbody>
               <tr>
                 <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
-                  <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}' font-size: 16px;line-height: 22px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
-                    <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 600px;width: 100%; border-radius: 0.8rem;">
+                  <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}'; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }};  22px;font-weight: 400; color: {{ item['text_color'] }};padding: 0; margin: 0; margin-bottom: 15px;">
+                    <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px; max-width: 600px; width: 100%; border-radius: {{item['image_corner_radius'] }};"></a>
                   </p>
                 </td>
               </tr>
@@ -20,12 +20,12 @@
           <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="600">
             <tbody>
               <tr>
-                <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
-                  <p class="padb5" style="mso-line-height-rule: exactly;font-size: 15px;line-height: 20px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px; font-family: '{{ item['font_family'] }}'; style:'{{ item['font_style'] }};">
-                    <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></h2>
-                  <p style="mso-line-height-rule: exactly;font-size: 15px;font-family: '{{ item['font_family'] }}'; font-style:'{{ item['font_style'] }}; line-height: 20px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important; ">{{ item['subtitle']}}</p>
-                  <p style="font-family: '{{ item['font_family'] }}'; style:'{{ item['font_style'] }}; font-size: 15px;line-height: 20px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br><br>
-                    <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
+                <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
+                  <p style="mso-line-height-rule: exactly; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }};font-weight: 600; color: #000000;margin: 0; padding: 0 0 15px 0; padding-bottom: 5px; font-family: '{{ item['font_family'] }}'; style:'{{ item['font_style'] }};">
+                    <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></p>
+                  <p style="mso-line-height-rule: exactly; font-size: {{ item['font_size'] }}; font-family: '{{ item['font_family'] }}'; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height'] }};  font-weight: 400; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</p>
+                  <p style="mso-line-height-rule: exactly; font-size: {{ item['font_size'] }}; font-family: '{{ item['font_family'] }}'; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height'] }}; font-weight: 400; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important; ">{{ item['main_copy'] }}<br><br>
+                    <a href="{{ item['link_ref'] }}" style="text-decoration: underline; color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
                 </td>
               </tr>
               </tbody>
