--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -10,248 +10,210 @@
 </xml><![endif]-->
 
 <!--[if gt mso 15]>
-  <style type="text/css" media="all">
-    /* Outlook 2016 Height Fix */
-    table, tr, td {border-collapse: collapse;}
-    tr { font-size:0px; line-height:0px; border-collapse: collapse; }
-  </style>
-  <![endif]-->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="format-detection" content="date=no">
-  <meta name="format-detection" content="telephone=no">
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <style>
-    @font-face {
-      src: url('https://backoffice.nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-      url('https://backoffice.nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff') format("woff");
-      font-family: 'FormaDJRVariable';
-      font-style: bold;
-      font-variation-settings: "wght" 600;
-    }
-    @font-face {
-      src: url('https://backoffice.nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-      url('https://backoffice.nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff') format("woff");
-      font-family: 'FormaDJRVariable';
-      font-style: normal;
-      font-variation-settings: "wght" 400;
-    }
-    @font-face {
-      src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff2') format("woff2"),
-      url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff') format("woff");
-      font-family: 'WarblerText-Regular';
-      font-style: normal;
-      font-weight: 400;
-    }
-    
-    @font-face {
-      src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff2') format("woff2"),
-      url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff') format("woff");
-      font-family: 'WarblerText-Italic';
-      font-style: italic;
-      font-weight: 400;
-    }
-    
-    @font-face {
-      src: url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
-      url('https://backoffice.nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
-      font-family: 'WarblerText-Bold';
-      font-style: bold;
-      font-weight: 700;
-    }
-    @font-face {
-      src: url('/fonts/roslindale/RoslindaleText-Regular.woff2') format("woff2"),
-      url('/fonts/roslindale/RoslindaleText-Regular.woff') format("woff");
-      font-family: 'RoslindaleText-Regular';
-      font-style: normal;
-      font-weight: normal;
-    }
-    @font-face {
-      src: url('/fonts/roslindale/RoslindaleText-Bold.woff2') format("woff2"),
-      url('/fonts/roslindale/RoslindaleText-Bold.woff') format("woff");
-      font-family: 'RoslindaleText-Bold';
-      font-style: normal;
-      font-weight: bold;
-    }
-    
-    
-  </style>
-  <style media="screen" type="text/css">
-    @media screen and (max-width:599px) {
-      .force-row,
-      .container,
-      .header,
-      .body,
-      .footer {
-        width: 100% !important;
-        max-width: 100% !important;
-      }
-      .padl20 {
-        padding-left: 12px !important
-      }
-      .padr20 {
-        padding-right: 12px !important
-      }
-      .padl10 {
-        padding-left: 12px !important
-      }
-      .padr10 {
-        padding-right: 12px !important
-      }
-      .padt20 {
-        padding-top: 12px !important
-      }
-      .mobt0 {
-        padding-top: 0 !important
-      }
-      .mobb15 {
-        margin-bottom: 15px !important
-      }
-      .headline {
-        padding-left: 12px !important;
-        padding-right: 12px !important;
-      }
-      .large,
-      h1 {
-        font-size: 19px !important;
-        line-height: 27px !important;
-      }
-      .spacer {
-        padding-top: 15px !important;
-      }
-      .browser {
-        display: none !important;
-      }
-      .align-left {
-        text-align: left
-      }
-      a.h1byline {
-        line-height: 12px !important;
-        padding-top: 8px;
-        font-size: 10px !important;
-      }
-      .rounded-box {
-        border-radius: 0.5rem !important;
-      }
-    }
-  </style>
-  
-  <!--[if mso]>
-    <style type="text/css">
-      body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
-    </style>
-    <![endif]-->
-    <style media="screen" type="text/css">
-      .ios-footer a {
-        color: #aaaaaa !important;
-        text-decoration: underline;
-      }
-      .yshortcuts a {
-        border-bottom: none !important;
-      }
-      .ExternalClass {
-        width: 100%;
-      }
-      .ExternalClass,
-      .ExternalClass p,
-      .ExternalClass span,
-      .ExternalClass font,
-      .ExternalClass td,
-      .ExternalClass div {
-        line-height: 100%;
-      }
-      .ReadMsgBody {
-        width: 100%;
-        background-color: #ebebeb;
-      }
-      img {
-        -ms-interpolation-mode: bicubic;
-      }
-      a[href^="x-apple-data-detectors:"],
-      a[x-apple-data-detectors] {
-        color: inherit !important;
-        text-decoration: none !important;
-        font-size: inherit !important;
-        font-family: inherit !important;
-        font-weight: inherit !important;
-        line-height: inherit !important;
-      }
-    </style>
-    <style>
-      /* CSS HEX */
+<style type="text/css" media="all">
+  /* Outlook 2016 Height Fix */
+  table, tr, td {border-collapse: collapse;}
+  tr { font-size:0px; line-height:0px; border-collapse: collapse; }
+</style>
+<![endif]-->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="date=no">
+<meta name="format-detection" content="telephone=no">
 
-:root {
-  --orange-color: #FFA500;
-  --aquamarine: #77F2B4;
-  --amethyst: #9b5de5ff;
---lavender-pink: #F7B7D7;
---maize: #fee440ff;
---timberwolf: #CCCCC8;
---celadon: #B6D9C6;
---brightblue: #95defe;
---straw: #F7F49C;
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<style>
+  @font-face {
+    src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff') format("woff");
+    font-family: 'FormaDJRVariable';
+    font-style: bold;
+    font-variation-settings: "wght" 600;
+  }
+  @font-face {
+    src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRVariable[opsz,slnt,wdth,wght].woff') format("woff");
+    font-family: 'FormaDJRVariable';
+    font-style: normal;
+    font-variation-settings: "wght" 400;
+  }
+  @font-face {
+    src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff2') format("woff2"),
+    url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff') format("woff");
+    font-family: 'WarblerText';
+    font-style: normal;
+    font-weight: 400;
+  }
+  
+  @font-face {
+  src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff2') format("woff2"),
+       url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Italic.woff') format("woff");
+  font-family: 'WarblerText';
+  font-style: italic;
+  font-weight: 400;
 }
-    </style>
-  </head>
-  <body  style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
-    
-    <!-- HEADER -->
-    <table border="0" cellpadding="0" cellspacing="0" style="background-color: #FFFFFF; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-      <tbody>
-        <tr>
-          <!-- HEADER COLOR -->
-          <td align="left" style="padding-left: 5rem; background-color: #D1D5DE; border-collapse: collapse;" valign="top">
+
+@font-face {
+  src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff2') format("woff2"),
+       url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Bold.woff') format("woff");
+  font-family: 'WarblerText';
+  font-style: normal;
+  font-weight: bold;
+  font-weight: 700;
+}
+
+@font-face {
+  src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff2') format("woff2"),
+       url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-BoldItalic.woff') format("woff");
+  font-family: 'WarblerText';
+  font-weight: bold;
+  font-style: italic;
+  font-weight: 700;
+}
+
+@font-face {
+  src: url('https://nearfuturelaboratory.com//fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
+       url('https://nearfuturelaboratory.com//fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff') format("woff");
+  font-family: 'RoslindaleVariable';
+}
+  
+</style>
+<style media="screen" type="text/css">
+  @media screen and (max-width:599px) {
+    .force-row,
+    .container,
+    .header,
+    .body,
+    .footer {
+      width: 100% !important;
+      max-width: 100% !important;
+    }
+    .padl20 {
+      padding-left: 12px !important
+    }
+    .padr20 {
+      padding-right: 12px !important
+    }
+    .padl10 {
+      padding-left: 12px !important
+    }
+    .padr10 {
+      padding-right: 12px !important
+    }
+    .padt20 {
+      padding-top: 12px !important
+    }
+    .mobt0 {
+      padding-top: 0 !important
+    }
+    .mobb15 {
+      margin-bottom: 15px !important
+    }
+    .headline {
+      padding-left: 12px !important;
+      padding-right: 12px !important;
+    }
+    .large,
+    h1 {
+      font-size: 19px !important;
+      line-height: 27px !important;
+    }
+    .spacer {
+      padding-top: 15px !important;
+    }
+    .browser {
+      display: none !important;
+    }
+    .align-left {
+      text-align: left
+    }
+    a.h1byline {
+      line-height: 12px !important;
+      padding-top: 8px;
+      font-size: 10px !important;
+    }
+    .rounded-box {
+      border-radius: 0.5rem !important;
+    }
+  }
+</style>
+
+<!--[if mso]>
+<style type="text/css">
+  body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
+</style>
+<![endif]-->
+<style media="screen" type="text/css">
+  .ios-footer a {
+    color: #aaaaaa !important;
+    text-decoration: underline;
+  }
+  .yshortcuts a {
+    border-bottom: none !important;
+  }
+  .ExternalClass {
+    width: 100%;
+  }
+  .ExternalClass,
+  .ExternalClass p,
+  .ExternalClass span,
+  .ExternalClass font,
+  .ExternalClass td,
+  .ExternalClass div {
+    line-height: 100%;
+  }
+  .ReadMsgBody {
+    width: 100%;
+    background-color: #ebebeb;
+  }
+  img {
+    -ms-interpolation-mode: bicubic;
+  }
+  a[href^="x-apple-data-detectors:"],
+  a[x-apple-data-detectors] {
+    color: inherit !important;
+    text-decoration: none !important;
+    font-size: inherit !important;
+    font-family: inherit !important;
+    font-weight: inherit !important;
+    line-height: inherit !important;
+  }
+</style>
+<style>
+  /* CSS HEX */
+  
+  :root {
+    --orange-color: #FFA500;
+    --aquamarine: #77F2B4;
+    --amethyst: #9b5de5ff;
+    --lavender-pink: #F7B7D7;
+    --maize: #fee440ff;
+    --timberwolf: #CCCCC8;
+    --celadon: #B6D9C6;
+    --brightblue: #95defe;
+    --straw: #F7F49C;
+  }
+</style>
+</head>
+<body  style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
+  
+  <!-- HEADER -->
+
+      
+      <!-- BODY -->
+      <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
+        <tbody>
+          <tr>
             
-            <!-- 640px container -->
-            <table border="0" cellpadding="0" cellspacing="0" class="header mobt0" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;padding-top: 20px;" width="640">
-              <tbody>
-                <tr>
-                  <td align="left" style="border-collapse: collapse;">
-                    
-                    <!--[if mso]>
-                      <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                        <tr><td width="35%" valign="top"><![endif]-->
-                          <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="160">
-                            <tbody>
-                              <tr>
-                                <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 5px;padding-left: 3rem;" valign="top">
-                                  <p style="font-family:'FormaDJRVariable'; font-weight: 800; font-size: 24px;line-height: 24px;color: #000000;padding: 0;margin: 0;margin-bottom: 5px;">
-                                    <!-- QUOTE -->
-                                    Imagination<br>Precedes<br> Inspiration<br>Precedes <br>Innovation
-                                  </p>
-                                  <!-- <p class="marb0" style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 0;">
-                                    <b style="font-weight: 600;"></b> -->
-                                  </p>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                          
-                          <!--[if mso]></td></tr></table><![endif]-->
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </td>
-              </tr>
-       </tbody>
-    </table>
-
-    <!-- BODY -->
-    <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-      <tbody>
-        <tr>
-
-
-        <tr>
-          <td align="center" style="padding-left: 0.5rem; padding-right: 1rem; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
-
-            <!-- 660px container (white background) -->
-            <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
-              <tbody>
-<!-- end top.html -->
+            
+            <tr>
+              <td align="center" style="padding-left: 10px; padding-right: 10px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+                
+                <!-- 660px container (white background) -->
+                <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
+                  <tbody>
+                    <!-- end top.html -->
