--- a/templates/box-item.html
+++ b/templates/box-item.html
@@ -1,13 +1,13 @@
                <!-- start box-item.html -->
               <tr>
-                <td align="left" style="border-left:{{ item["border_width"]}} solid {{ item["outline_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-bottom: {{ item["border_width"] }} solid {{ item["border_color"] }};background-color: {{ item['background_color']}};border-collapse: collapse;">
+                <td align="left" style="border-left:{{ item["border_width"]}} solid {{ item["outline_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-bottom: {{ item["border_width"] }} solid {{ item["border_color"] }};background-color: {{ item['background_color']}};border-collapse: collapse; border-bottom-left-radius: {{ item['radius']}}; border-bottom-right-radius: {{ item['radius']}};">
 
                   <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="290">
                     <tbody>
                       <tr>
                         <td class="padt20 padr10 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-left: 20px; padding-bottom: 20px;" valign="top">
                           <p class="marb0" style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font_style']}}; font-color: {{ item['text_color']}}; font-size: 16px;line-height: 23px;font-weight: 400;padding: 0;margin: 0;margin-bottom: 0;">
-                            <a href="{{item['link_ref']}}"><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%; border-radius: 0.8rem;"></a>
+                            <a href="{{item['link_ref']}}"><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 516px;width: 100%;"></a>
                           </p>
                         </td>
                       </tr>
