--- a/templates/full-width-item-header.html
+++ b/templates/full-width-item-header.html
@@ -7,7 +7,7 @@
         </tr>
                <tr>
                 <td align="center" class="headline" style="background-color: {{ item['background_color']}}; border-collapse: collapse; border-left: {{ item['border_width']}} solid {{ item['border_color'] }}; border-right: {{ item['border_width']}} solid {{ item['border_color'] }};  border-top: {{ item['border_width']}} solid {{ item['border_color'] }}; border-top-left-radius: {{item['radius'] }}; border-top-right-radius: {{item['radius'] }}; {{ item['extra_box_style'] }}; padding-top: 15px;padding-right: 0px; padding-left: 0px ;padding-bottom: 15px;">
-                  <p style="mso-line-height-rule: exactly;font-size: 22px;font-family: {{ item['font_family'] }}; font-style: {{ item['font_style']}}; font-weight: {{item['font_weight']}}; line-height: normal;color: #000000;margin: 0;padding: 0;">{{ item['header_text']}}</p>
+                  <span style="mso-line-height-rule: exactly; font-size: 22px; font-family: '{{ item['font_family'] }}'; font-style: {{ item['font_style']}}; font-weight: {{item['font_weight']}}; line-height: normal; color: #000000; margin: 0; padding: 0;">{{ item['header_text']}}</span>
                 </td>
               </tr>
               <!-- </tbody>
