--- a/templates/toc-head-item.html
+++ b/templates/toc-head-item.html
@@ -41,7 +41,7 @@
 {{ item['main_toc_text'] }}
       </p>
       <!-- start salutation -->
-      <p class="small grey padt20" style="font-family: '{{ item['font_family'] }}';font-size: {{ item['font_size']}};line-height: normal;font-weight: 400;color: {{ item['text_color']}} !important;padding: 0;margin: 0;margin-bottom: 15px;padding-top: 20px;">{{ item['salutation'] }}</p>
+      <span class="small grey padt20" style="font-family: '{{ item['font_family'] }}'; font-size: {{ item['font_size']}}; line-height: normal; font-weight: normal; color: {{ item['text_color']}} !important;padding: 0;margin: 0;margin-bottom: 15px;padding-top: 20px;">{{ item['salutation'] }}</span>
         <!-- end salutation -->
     </td>
   </tr>
