--- a/templates/featured-special.html
+++ b/templates/featured-special.html
@@ -36,7 +36,7 @@
                             <p style="mso-line-height-rule: exactly; font-family: '{{ item['title_font_family'] }}'; font-size: {{item['title_font_size']}}; line-height: {{item['main_line_height']}}; font-weight: bold; color: {{item["text_color"]}}; margin: 0;padding: 0 0 15px 0;">
                               <a href="{{ item['link_ref']}}" style="text-decoration: underline; color: {{item["text_color"]}} !important;">{{ item['link_text']}}</a> →</p>
                             <p style="mso-line-height-rule: exactly; font-size: {{item['subtitle_font_size']}}; line-height: normal; font-weight: bold; margin: 0;padding: 0 0 10px 0; color: {{ item["light_text_color"]}} !important;">{{ item['subtitle']}}</p>
-                            <p style="font-family: '{{ item['font_family'] }}'; font-size: {{item['main_font_size']}}; line-height: {{item['main_line_height']}}; font-weight: {{item['font-weight']}}; color:{{item["text_color"]}};padding: 0; margin: 0; margin-bottom: 15px;">{{ item['main_copy'] }} 
+                            <p style="font-family: '{{ item['font_family'] }}'; font-size: {{item['main_font_size']}}; line-height: {{item['main_line_height']}}; font-weight: {{item['font_weight']}}; color:{{item["text_color"]}};padding: 0; margin: 0; margin-bottom: 15px;">{{ item['main_copy'] }} 
                               </p>
                           </td>
                         </tr>
