--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -86,11 +86,20 @@
   @media screen and (max-width:599px) {
     .force-row,
     .container,
-    .header,
     .body,
     .footer {
       width: 100% !important;
       max-width: 100% !important;
+    }
+    table {
+    width: 100% !important;
+    max-width: 100% !important;
+    }
+    .header {
+      width: 100% !important;
+      max-width: 100% !important;
+      padding-left: 10px !important;
+      padding-right: 10px !important;
     }
     .padl20 {
       padding-left: 12px !important
@@ -206,10 +215,7 @@
       
       <!-- BODY -->
       <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-        <tbody>
-          <tr>
-            
-            
+        <tbody>            
             <tr>
               <td align="center" style="padding-left: 10px; padding-right: 10px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
                 
