--- a/templates/toc-head-item.html
+++ b/templates/toc-head-item.html
@@ -25,7 +25,7 @@
           <tr>
             <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
               <p class="small grey" style="font-family: '{{ item['font_family'] }}';font-size: 15px;line-height: normal;font-weight: 400;color: {{ item['text_color']}} !important;padding: 0;margin: 0;margin-bottom: 15px;">
-                <webversion>View web version</webversion> →</p>
+                <a style="text-decoration: none;" href="{{ item['view_online_url'] }}">View web version</a> →</p>
             </td>
           </tr>
         </tbody>
