--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -5,7 +5,7 @@
             <tbody>
               <tr>
                 <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
-                  <p style="font-family: '{{ item['font_family'] }}'; '{{ item['font_style'] }}'; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }};  22px;font-weight: 400; color: {{ item['text_color'] }};padding: 0; margin: 0; margin-bottom: 15px;">
+                  <p style="font-family: '{{ item['title_font_family'] }}'; font-size: '{{ item['title_font_size'] }}';  line-height: {{ item['line_height'] }}; font-weight: 400; color: {{ item['text_color'] }};padding: 0; margin: 0; margin-bottom: 15px;">
                     <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px; max-width: 600px; width: 100%; border-radius: {{item['image_corner_radius'] }};"></a>
                   </p>
                 </td>
@@ -22,10 +22,10 @@
               <tr>
                 <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
 
-                  <span style="mso-line-height-rule: exactly; font-size: 22px; line-height: 22px;font-weight: bold; color: #000000;margin: 0; padding: 0 0 15px 0; padding-bottom: 5px; font-family: '{{ item['font_family'] }}'; style:'{{ item['font_style'] }};">
+                  <span style="mso-line-height-rule: exactly; font-size: {{ item['font_size']}}; line-height: {{ item['line_height']}}; font-weight: bold; color: #000000;margin: 0; padding: 0 0 15px 0; padding-bottom: 5px; font-family: '{{ item['font_family'] }}';">
                     <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></span>
-                    <br/><br/>
-                  <p style="mso-line-height-rule: exactly; font-size: 20px; font-family: '{{ item['font_family'] }}'; font-style:{{ item['font_style'] }}; line-height: 22px;  font-weight: bold; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</p>
+                    <br/>
+                  <p style="mso-line-height-rule: exactly; font-size: {{ item['font_size']}};  font-family: '{{ item['font_family'] }}'; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height']}};  font-weight: bold; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</p>
                   
                   <span style="mso-line-height-rule: exactly; font-size: {{ item['font_size'] }}; font-family: '{{ item['font_family'] }}'; font-style:{{ item['font_style'] }}; line-height: {{ item['line_height'] }}; font-weight: normal; margin: 0; padding: 0 0 5px 0; color: {{ item['light_text_color']}} !important; ">{{ item['main_copy'] }}</span>
                   <br><br>
